--- a/scss/_drupal-override-app-page.scss
+++ b/scss/_drupal-override-app-page.scss
@@ -1,9 +1,9 @@
 /* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR APP PAGE ----------------------- */
 
-nav.tabs {
-  max-width: 1220px;
-  margin: 0 auto;
-}
+// nav.tabs {
+//   max-width: 1220px;
+//   margin: 0 auto;
+// }
 
 .applicationWrapper {
   max-width: 1220px;
