--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -24,10 +24,12 @@
 
     &-picture {
         width: 100%;
+        max-height: 10rem;
+        border-radius: 8px;
     }
 
     &-text {
-        margin: 2rem 0 0 2rem;
+        margin: 1.2rem 0 0 2rem;
         h4 {
             max-width: 13.5rem;
             font-weight: 600;
@@ -35,7 +37,7 @@
 
         p {
             max-width: 13.5rem;
-            margin-top: 1.5rem;
+            margin-top: 1rem;
         }
     }
 
