--- a/templates/node/node--product.html.twig
+++ b/templates/node/node--product.html.twig
@@ -115,7 +115,7 @@
 </article>
 
 <div class="field plans footer-bg">
-  <h2 class="field__label label tariff-label">{{ 'Tariff plans'|t }}</h2>
+  <h2 class="field__label label tariff-label">{{ 'Тарифные планы' }}</h2>
   <div class="subHeading">
     {% if not userLoggedIn %}
       <div class="notLoggedIn">
@@ -226,7 +226,7 @@
           </div>
           <div class="tariff-plans-section-text">
             <p class="">Один тариф действует для одного приложения, подписанного на данный API</p>
-            <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-api@vtb.ru" class="link-primary">portal-api@vtb.ru</a></p>
+            <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-open_api@vtb.ru" class="link-primary">portal-open_api@vtb.ru</a></p>
           </div>
         </div> #}
 
@@ -267,7 +267,7 @@
           </div>
           <div class="tariff-plans-section-text">
             <p class="">Один тариф действует для одного приложения, подписанного на данный API</p>
-            <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-api@vtb.ru" class="link-primary">portal-api@vtb.ru</a></p>
+            <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-open_api@vtb.ru" class="link-primary">developer@vtb.ru</a></p>
           </div>
         </div>
 
