--- a/scss/_drupal-override.scss
+++ b/scss/_drupal-override.scss
@@ -7,8 +7,15 @@
 @import 'drupal-override-organisation';
 @import 'drupal-override-support';
 @import 'drupal-override-search';
+@import 'drupal-override-get-started';
+@import 'drupal-override-blog';
 
 /* ----------------------- STYLES TO OVERRIDE DRUPAL DEFAULTS ----------------------- */
+// Ссылки
+a:focus {
+    outline: none;
+}
+
 // Всевозможные окна с белой границей
 .route-apic-appcreate .main-container .row, .route-apic-appcreate-step-two .main-container .row, .route-applicationcreate .main-container .row, .route-applicationcreate-step-two .main-container .row, .route-apic-appverify-clientsecret .main-container .row, .route-apic-appcredentials-create .main-container .row, .route-apic-appreset-clientid .main-container .row, .route-apic-appreset-clientsecret .main-container .row, .route-apic-appcredentials-update .main-container .row, .route-apic-appcredentials-delete .main-container .row, .route-apic-appupdate .main-container .row, .route-apic-appdelete .main-container .row, .route-apic-apppromote .main-container .row, .route-apic-appimage-upload .main-container .row, .route-apic-appimage-delete .main-container .row, .route-consumerorgcreate .main-container .row, .route-consumerorgupdate .main-container .row, .route-consumerorgdelete .main-container .row, .route-consumerorgchangeowner .main-container .row, .route-consumerorginvite .main-container .row, .route-consumerorgremove-user .main-container .row, .route-consumerorgresend-invite .main-container .row, .route-change-pwd-pagechange-password-form .main-container .row .apic-change-pwd-form, .route-entityuseredit-form .main-container .row .user-form, .route-ibm-apimsubscription-wizardnoplan .modal-dialog .form-item input, form.user-pass-reset, .apicForm, .apic-user-form {
     border: none;
@@ -75,16 +82,112 @@
     background-color: transparent;
 }
 
+input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, textarea:-webkit-autofill, textarea:-webkit-autofill:hover, textarea:-webkit-autofill:focus, select:-webkit-autofill, select:-webkit-autofill:hover, select:-webkit-autofill:focus {
+    border: inherit;
+    -webkit-text-fill-color: #e5e7eb;
+    -webkit-box-shadow: 0 0 0px 1000px #2d2f35 inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
+// Ссылки на файлы
+.file {
+    font-size: inherit;
+}
+
 // Кнопка копирования
 .apiconnect-copier .copy-icon {
     fill: #3a85ff;
+}
+
+// Тултип / tooltip
+.tooltip {
+    background-color: transparent;
+}
+.tooltip.bottom .tooltip-arrow {
+    // border-bottom-color: #000;
+    border: none;
+}
+.tooltip-inner {
+    color: #E5E7EB;
+    background-color: #000;
+    font-size: 16px;
+    line-height: 24px;
+    border-radius: 4px;
 }
 
 // Чекбокс
 .bx--global-light-ui .bx--checkbox-appearance {
     background-color: transparent;
 }
+// Чекбокс радио
+.bx--global-light-ui .bx--radio-button__appearance {
+    background-color: transparent;
+    border: 1px solid #7B7E86;
+}
+.bx--global-light-ui .bx--radio-button:checked+.bx--radio-button__appearance {
+    border: 4px solid #0062FF;
 
+    &::before {
+        display: none;
+    }
+}
+
+// Дропдаун меню
+.apicMyOrg .overflow-menu ul.dropit-submenu {
+    background-color: #000000;
+    border-radius: 4px;
+    border: none;
+}
+.overflow-menu ul.dropit-submenu:before {
+    background-color: transparent;
+    border-top: none;
+    border-left: none;
+}
+// Пункты дропдаун меню
+.overflow-menu ul.dropit-submenu a, .overflow-menu ul.dropit-submenu a:visited {
+    background-color: transparent;
+    color: #E5E7EB;
+
+    &:hover {
+        background-color: #3A85FF;
+        color: #fff;
+    }
+}
+// Дропдаун организации
+.dropitmenu ul.dropit-submenu {
+    background-color: #000;
+    border: none;
+    padding: 16px 16px;
+    width: max-content;
+    color: #7E8390;
+    font-size: 14px;
+    line-height: 16px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+.dropitmenu ul.dropit-submenu a,
+.dropitmenu ul.dropit-submenu a:visited {
+    font-size: 1rem;
+    color: #E5E7EB;
+    line-height: 24px;
+    margin-bottom: .75rem;
+    padding: 0;
+
+    &:hover {
+        background: transparent;
+        color: #0062ff;
+        text-decoration-line: underline;
+        text-underline-offset: 3px;
+    }
+}
+li.selectorg {
+    font-size: 14px;
+    line-height: 16px;
+}
 ////////////
 
 
@@ -306,6 +409,9 @@ li.dropit-trigger a {
 }
 .form-control {
     color: #E5E7EB;
+    background-color: transparent;
+    border: 1px solid #505258;
+    border-radius: 4px;
     &:focus {
         outline: none;
         -webkit-box-shadow: none;
@@ -419,6 +525,10 @@ select.simpler-select.form-select {
         background-color: #022D9A;
     }
 }
+// Иконка конверта в кнопке
+span.icon.glyphicon.glyphicon-envelope {
+    display: none;
+}
 
 .bx--global-light-ui .view-filters.form-group .form-actions {
     margin: 1rem 0;
@@ -459,7 +569,7 @@ button#edit-reset {
     background-color: transparent !important;
     font-size: 1rem !important;
     font-weight: 500;
-    border: 1px solid #FFFFFF !important;
+    border: 1px solid #FFFFFF;
     border-radius: 4px !important;
     color: inherit;
 
@@ -485,16 +595,22 @@ button#edit-reset {
     margin: 0 1rem;
     border-radius: 4px;
     background-color: $color-darkweb-bg;
+    border-width: 1px !important;
+    border-style: solid;
+
 
     &.alert-success {
-        border: 1px solid #4AB56E;
+        border-color:#4AB56E;
+    }
+    &.alert-warning {
+        border-color: #FF9F19;
     }
     &.alert-danger {
-        border: 1px solid #E15664;
+        border-color: #E15664;
     }
 }
 .alert:nth-child(2) {
-    margin-top: 3rem;
+    margin-top: .75rem;
 }
 svg.bx--inline-notification__close-icon,
 .close, .close:hover, .close:focus {
@@ -514,8 +630,10 @@ svg.bx--inline-notification__close-icon,
 .pagination>.active>a:hover,
 .pagination>.active>span:hover,
 .pagination>.active>a:focus,
-.pagination>.active>span:focus {
+.pagination>.active>span:focus,
+.pagination>li>a:hover {
     border: none;
+    color: $color-neutral-05;
     background-color: $color-primary-50;
 }
 
